<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:paddingTop="20dp"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logostarbug"
            android:transitionName="logo_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/branchTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logoImage"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/starbug"
            android:fontFamily="@font/bungee"
            android:textSize="40sp"
            android:textColor="#693F2C"
            android:transitionName="brand_text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="-60dp"
        android:fontFamily="@font/bungee"
        android:text="@string/welcome"
        android:textColor="#693F2C"
        android:textSize="40sp"
        android:transitionName="welcome_text"/>

    <TextView
        android:id="@+id/signUpTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up_to_find_your_favor"
        android:textColor="#693F2C"
        android:textSize="18sp"
        android:transitionName="sign_in_up_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fullName"
            android:hint="@string/full_name"
            android:textColorHint="@color/colorPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:cursorColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:inputType="text"/>
            
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameInputLayout"
            android:hint="@string/username"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            android:textColorHint="@color/colorPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:cursorColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            app:counterTextColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailInputLayout"
            android:hint="@string/email"
            android:textColorHint="@color/colorPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:cursorColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumberInputLayout"
            android:hint="@string/phone_number"
            android:textColorHint="@color/colorPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:cursorColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordInputLayout"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/colorPrimary"
            app:passwordToggleTint="@color/colorPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:cursorColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="SIGN UP"
        android:textColor="#FFF"
        app:cornerRadius="0dp"
        android:transitionName="go_button"/>

    <Button
        android:id="@+id/haveAccountBtn"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00000000"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="0dp"
        android:textColor="#000"
        android:text="ALREADY HAVE AN ACCOUNT? SIGN IN"
        app:cornerRadius="0dp"
        android:transitionName="ask_button"/>

</LinearLayout>