<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".authentication.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logostarbug"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:transitionName="logo_image"/>

        <TextView
            android:id="@+id/branchTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logoImage"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/starbug"
            android:fontFamily="@font/bungee"
            android:textSize="40sp"
            android:textColor="#693F2C"
            android:transitionName="brand_text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="Hello there, Welcome Back"
        android:textColor="#693F2C"
        android:textSize="40sp"
        android:transitionName="welcome_text"/>

    <TextView
        android:id="@+id/signInTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/sign_in_to_continue"
        android:textColor="#693F2C"
        android:textSize="18sp"
        android:transitionName="sign_in_up_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            app:cursorColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            android:textColorHint="#693F2C">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#693F2C" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:textColorHint="#693F2C"
            app:cursorColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:passwordToggleTint="@color/colorPrimary"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#693F2C" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgetPasswordBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:text="@string/forget_password"
            android:textColor="#000" />

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#693F2C"
            android:text="@string/sign_in"
            android:textColor="#fff"
            app:cornerRadius="0dp"
            android:transitionName="go_button"/>

        <Button
            android:id="@+id/haveUserBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:text="@string/new_user_sign_up"
            android:textColor="#000"
            android:transitionName="ask_button"/>

    </LinearLayout>


</LinearLayout>