<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:backgroundTint="@color/Black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/starbug"
        android:textAlignment="center"
        android:textColor="#693F2C"
        android:textSize="48sp"
        android:translationZ="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        android:transitionName="brand_text"/>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="406dp"
        android:layout_height="395dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="395dp"
            app:srcCompat="@drawable/logostarbug"
            android:transitionName="logo_image"/>
    </FrameLayout>

    <TextView
        android:id="@+id/textViewSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/coddee_is_bug_stay_awake_for_it"
        android:textColor="#693F2C"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBrand"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textViewCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="serif"
        android:text="@string/intech_co"
        android:textColor="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>